--- a/index.html
+++ b/index.html
@@ -7,21 +7,47 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="todo-app">
-      <h1>📝 KNGFlow To-Do List</h1>
-      <form id="todo-form">
-        <label for="todo-input" class="sr-only">New task</label>
-        <input
-          type="text"
-          id="todo-input"
-          placeholder="Add a new task..."
-          required
-        />
-        <button type="submit">Add</button>
-      </form>
-      <p class="instruction">💡 Click a task to mark it complete.</p>
-      <ul id="todo-list" aria-live="polite"></ul>
-    </div>
+    <!-- Skip link for accessibility -->
+    <a href="#main" class="skip-link">Skip to main content</a>
+
+    <main id="main">
+      <div class="todo-app">
+        <header class="app-header">
+          <h1>📝 KNGFlow To-Do List</h1>
+          <button
+            id="darkModeToggle"
+            aria-label="Toggle dark mode"
+            class="dark-toggle"
+            data-tooltip="Switch Theme"
+          >
+            🌙
+          </button>
+        </header>
+        <!-- Task input form -->
+        <form id="todo-form">
+          <label for="todo-input" class="sr-only">New task</label>
+          <input
+            type="text"
+            id="todo-input"
+            placeholder="Add a new task..."
+            aria-describedby="instruction"
+            required
+          />
+          <button type="submit" aria-label="Add new task">Add</button>
+        </form>
+
+        <p id="instruction" class="instruction">
+          💡 Click a task to mark it complete.
+        </p>
+
+        <!-- Task list -->
+        <ul id="todo-list" aria-live="polite" role="list"></ul>
+
+        <footer>
+          <p>Built with ❤️ by KNGFlow</p>
+        </footer>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
